Tue Feb 23 15:33:33 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * DAnCE/tools/Convert_Plan/Convert_Plan.mpc:

          Added dance_config_handlers as a base project to DAnCE_Convert_Plan
          project. Thanks to William Otte for the suggestion.

Tue Feb 23 15:16:24 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/ExecutionManager/ExecutionManager.mpc:

          Added split_plan base project.

Tue Feb 23 14:54:11 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedWriter/Sender/Writer_Sender_exec.cpp:
          Inserted forgotten new line character.

Tue Feb 23 14:46:23 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/descriptors/Plan.cdp:
          Resolved deployment errors related to generation of the connector
          code.

Tue Feb 23 14:34:59 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          CSLUnexpStat is not ready, yet.

        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
          Layout changes.

        * connectors/dds4ccm/tests/VariousTopicsEvent/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/VariousTopicsEvent/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/VariousTopicsState/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/VariousTopicsState/descriptors/run_test.pl:
          Resolved deployment errors related to generation of the connector
          code.

Tue Feb 23 14:28:22 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tools/Convert_Plan/DAnCE_Convert_Plan_export.h:

          Missing file.

Tue Feb 23 13:25:49 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Base/Hello_Base.idl
        * connectors/dds4ccm/examples/Quoter/Base/Quoter_Base.idl