@@ -1,3 +1,15 @@
+Tue Feb 23 16:13:24 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
+
+          Bugfix for how connections are handled when there are two
+          internalEndpoints but it is _not_ a local conneciton.
+
+        * examples/Hello/descriptors/PlanLocality_DifferentProcesses.cdp:
+        * examples/Hello/descriptors/PlanLocality_SameProcess.cdp:
+
+          Corrected IOR file so test script finds controller.
+
 Tue Feb 23 15:33:33 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>
 
         * DAnCE/tools/Convert_Plan/Convert_Plan.mpc:
